# dbwtl

./: .gitignore  .tavis.yml  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.adoc  COPYING  CTestConfig.cmake  README.adoc  cibuild.sh  dbwtl.supp  guide.html  pipadoc  setup_testenv.sh
cmake/modules/: UseDoxygen.cmake
doc/: CMakeLists.txt  Doxyfile.in  dbms_support.csv  dbms_support.csv.planned  sda_drivers.csv
doc/guide/: apiref.txt  genguide.sh  guide.conf  intro.txt  license.txt
doc/manpage/: genmanpage.sh  license.txt  manpage.conf
doc/rfc/: VariantImplementation.html  VariantImplementation.txt  genrfc.sh
include/: targetver.h  version.rc.in
include/dbwtl/: db_exceptions.hh  db_fwd.hh  db_objects.hh  dbobjects  dbwtl_config.hh.in  exceptions.hh  sdaccess.h  sdi.h  types.hh  ustreambuf.hh  ustring  ustring.hh  variant.hh
include/dbwtl/dal/: active_engines.hh  dal_fwd.hh  dal_interface.hh  dalinterface  types.hh  variant.hh  variant.inc
include/dbwtl/dal/engines/: firebird  firebird_engine.hh  generic  generic_engine.hh  odbc  odbc_engine.hh  sdi  sdi_engine.hh  sqlite  sqlite_engine.hh
include/dbwtl/stdext/: functional
include/dbwtl/util/: bcd.hh  devutils.hh  smartptr.hh
include/headers/: README
lemon/: lemon.c  lempar.c
src/: cachedresult.cc  db_exceptions.cc  debug.cc  devutils.hh  exceptions.cc  macros.hh  recordset.cc  shrrecord.cc  ustring.cc  utils.cc  utils.hh  variant.cc  variant_binary.cc  variant_expr.cc
src/dal/: dal_debug.hh  dal_interface.cc  library_support.hh  sqlutils.cc  sqlutils.hh
src/dal/firebird/: driver_libfbclient.hh  firebird_engine.cc  firebird_libfbclient.cc  firebird_libfbclient.hh
src/dal/generic/: generic_engine.cc
src/dal/odbc/: driver_odbc.hh  odbc_engine.cc  odbc_libodbc.cc  odbc_libodbc.hh
src/dal/sdi/: driver_libsdi.hh  sdi_engine.cc  sdi_libsdi.cc  sdi_libsdi.hh
src/dal/sqlite/: driver_libsqlite.hh  sqlite_engine.cc  sqlite_libsqlite.cc  sqlite_libsqlite.hh
src/dal/sqlproxy/: .gitignore  ast.cc  ast.hh  parser.y  parserapi.hh  rsproxy.hh  sqlcursor.cc  sqlcursor.hh  sqlparser.cc  sqlparser.hh  sqlproxy_fwd.hh  token.cc  token.hh  tokenizer.hh
src/dal/types/: type_bigint.cc  type_bool.cc  type_bytestreambuf.cc  type_int.cc  type_ivariant.cc  type_smallint.cc  type_string.cc  type_unicodestreambuf.cc
src/i18n/: codecvt  codecvt_byname.hh  codecvt_impl.hh  converter.hh  types.hh  wstring_convert.hh
src/types/: type_bigint.cc  type_blob.cc  type_bool.cc  type_bytestreambuf.cc  type_date.cc  type_float.cc  type_int.cc  type_interval.cc  type_ivariant.cc  type_memo.cc  type_numeric.cc  type_smallint.cc  type_string.cc  type_time.cc  type_timestamp.cc  type_unicodestreambuf.cc  type_varbinary.cc
tests/: CMakeLists.txt  bcd.cc  const-binding.cc  custom_accessor.cc  cxxc.hh  dal-sqlite-datatypes.cc  dal-sqlite-initengine.cc  db-blob.cc  db-bulk-bind-insert.cc  db-dbc-init.cc  db-diag.cc  db-options.cc  db-specialtypes.cc  db-sqlite-columndesc.cc  db-sqlite-tablelist.cc  db-streambuf-checks.cc  db-variant.cc  format.cc  sampledb.sqlite3.sql  sqlite-list-indices.cc  sqltypes-parser.cc  string-handling.cc  tdate.cc  ttime.cc  variant-sqlite.cc  variant.cc
tests/common/: CMakeLists.txt  common-blob-stability.cc  common-recordset.cc  common-shrrecord.cc  common-string-format.cc  common-variant-conv.cc
tests/firebird/: CMakeLists.txt  basic-operations.cc  firebird-basic.cc  firebird-blobs.cc  firebird-charset-none.cc  firebird-transactions.cc  firebird-variant-conv.cc  fixture_firebird.hh  fixture_firebird.hh.in  setup_firebird.sql  transactions.cc
tests/fixtures/: sqlite_memory.hh
tests/odbc/: CMakeLists.txt  basic-operations.cc  fb-tests.cc  fixture_fbodbc.hh  fixture_odbc.hh  fixture_odbc.hh.in  fixture_pg.hh  mssql-tds.cc  odbc-basics.cc  odbc-lob-copy.cc  odbc_dsn_setup.ini  setup_odbc_postgres.sql
tests/other/: bcd.cc  buffer-convertion.cc  const-binding.cc  custom_accessor.cc  dal-sqlite-datatypes.cc  dal-sqlite-initengine.cc  db-blob.cc  db-bulk-bind-insert.cc  db-dbc-init.cc  db-diag.cc  db-only-includes.cc  db-options.cc  db-specialtypes.cc  db-sqlite-columndesc.cc  db-sqlite-lastid.cc  db-sqlite-tablelist.cc  db-streambuf-checks.cc  sqlite-list-indices.cc  sqltypes-parser.cc  string-handling.cc  tdate.cc  ttime.cc  variant-conversions.cc  variant-sqlite.cc  variant.cc
tests/other/fixtures/: sqlite_memory.hh
tests/sqlite/: CMakeLists.txt  fixture_sqlite3.hh  fixture_sqlite3.hh.in  sqlite-cachedresult.cc  sqlite-generic.cc  sqlite-lastid.cc  sqlite-variant-conv.cc
